Success_history page bug fixed

--- a/source/success_history.html.haml
+++ b/source/success_history.html.haml
@@ -2,13 +2,13 @@
   .title-row
     .title
       ИСТОРИИ УСПЕХА
-    %a
+    %a{:href => '#'}
       КУПИТЬ ФРАНШИЗУ
       .arrow
         >
     .flatten
   .success-row
-    .success-box.sb-left
+    %a.success-box.sb-left{:href => '#'}
       .pic-box
         %img{:src => 'images/story-pic-1.png'}
       .tips
@@ -19,7 +19,7 @@
         .tips-body
           Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
           Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
-    .success-box.sb-mid
+    %a.success-box.sb-mid{:href => '#'}
       .pic-box
         %img{:src => 'images/story-pic-2.png'}
       .tips
@@ -30,7 +30,7 @@
         .tips-body
           Уучитывая современные тенденции. А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер,
           полагаясь на инсайдерскую информацию. Служба маркетинга компании без оглядки.
-    .success-box.sb-right
+    %a.success-box.sb-right{:href => '#'}
       .pic-box
         %img{:src => 'images/story-pic-3.png'}
       .tips
@@ -43,7 +43,7 @@
           А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер.
     .flatten
   .success-row
-    .success-box.sb-left
+    %a.success-box.sb-left{:href => '#'}
       .pic-box
         %img{:src => 'images/story-pic-4.png'}
       .tips
@@ -54,7 +54,7 @@
         .tips-body
           Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
           Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
-    .success-box.sb-mid
+    %a.success-box.sb-mid{:href => '#'}
       .pic-box
         %img{:src => 'images/story-pic-1.png'}
       .tips
@@ -65,7 +65,7 @@
         .tips-body
           Уучитывая современные тенденции. А вот по мнению аналитиков стимулирование сбыта синхронизирует рекламный клаттер,
           полагаясь на инсайдерскую информацию. Служба маркетинга компании без оглядки.
-    .success-box.sb-right
+    %a.success-box.sb-right{:href => '#'}
       .pic-box
         %img{:src => 'images/story-pic-2.png'}
       .tips
