presentations page bug fixed

--- a/source/stylesheets/lib/_presentations.css.sass
+++ b/source/stylesheets/lib/_presentations.css.sass
@@ -1,6 +1,7 @@
 .presentation-box
   width: 1080px
   .title-row
+    font-family: ptsans-bold
     margin-top: 10px
     margin-bottom: 7px
     .title
@@ -10,10 +11,8 @@
         size: 140%
         weight: bold
     a
-      padding-top: 12px
+      padding-top: 13px
       text-decoration: none
-      font:
-        weight: bold
       vertical-align: middle
       border: none
       background-image: url('../images/franchise_buy.png')
@@ -29,11 +28,13 @@
   .ssh-row
     margin-bottom: 20px
     .ssh-box-left
+      background-color: #f7f8f8
       border-bottom: solid 2px #f27d32
       float: left
       width: 520px
       height: 566px
     .ssh-box-right
+      background-color: #f7f8f8
       border-bottom: solid 2px #f27d32
       float: right
       width: 520px
@@ -44,6 +45,7 @@
       padding-right: 15px
       text-align: left
       .ssh-name
+        font-family: ptsans-bold
         font:
           size: 104%
           weight: bold
