success details page styling with bugs

--- a/source/stylesheets/main2.css.sass
+++ b/source/stylesheets/main2.css.sass
@@ -12,10 +12,12 @@
 @import 'lib/paginator'
 @import 'lib/container'
 @import 'lib/skin'
+@import 'lib/skin2'
 @import 'lib/dropdown'
 @import 'lib/noJS'
 @import 'lib/presentations'
 @import 'lib/_successHistory.css.sass'
+@import 'lib/_successDetails.css.sass'
 
 body
 	font-family: PTSans
