--- a/source/stylesheets/lib/_button.css.sass
+++ b/source/stylesheets/lib/_button.css.sass
@@ -11,7 +11,7 @@ button.orange
 	font-weight: normal
 	font-size: 15px
 	min-height: 38px
-	margin-top: 20px
+	margin: 10px 10px
 	padding-right: 30px
 	text-align: left
 	text-decoration: none
@@ -33,10 +33,10 @@ button.orange:before
 	background-color: #f27d32
 	border: 7px solid #fff
 	border-radius: 12px
-	-o-box-shadow: 0 0 1px #e0e1e3
-	-ms-box-shadow: 0 0 1px #e0e1e3
-	-webkit-box-shadow: 0 0 1px #e0e1e3
-	box-shadow: 0 0 1px #e0e1e3
+	-o-box-shadow: 0 0 1px #8C8D8D
+	-ms-box-shadow: 0 0 1px #8C8D8D
+	-webkit-box-shadow: 0 0 1px #8C8D8D
+	box-shadow: 0 0 1px #8C8D8D
 	display: block
 	content: ' '
 	position: absolute
@@ -51,3 +51,8 @@ button.orange:before
 	-moz-transform: skewX(-12deg)
 	-webkit-transform: skewX(-12deg)
 	transform: skewX(-12deg)
+
+
+.orange.oneLine
+	min-height: 16px
+	padding: 14px 30px 14px 16px
