--- a/source/stylesheets/main2.css.sass
+++ b/source/stylesheets/main2.css.sass
@@ -13,9 +13,11 @@
 @import 'lib/container'
 @import 'lib/skin'
 @import 'lib/dropdown'
+@import 'lib/franshiza_popover'
 @import 'lib/noJS'
 @import 'lib/presentations'
-@import 'lib/_successHistory.css.sass'
+@import 'lib/_successHistory'
+@import 'lib/franshiza-page'
 
 body
 	font-family: PTSans
@@ -63,13 +65,11 @@ h5
 	font-size: 12px
 
 .h1.with-top-margin,
-.h2.with-top-margin
-	margin-top: 30px
-
+.h2.with-top-margin,
 .h3.with-top-margin,
 .h4.with-top-margin,
 .h5.with-top-margin
-	margin-top: 10px
+	margin-top: 30px
 
 .upper
 	text-transform: uppercase
