--- a/source/stylesheets/lib/miniblogs.css.sass
+++ b/source/stylesheets/lib/miniblogs.css.sass
@@ -2,33 +2,35 @@ $color_orange: #f27d32
 $color_light_grey: #f7f8f8
 
 .miniblogs
-  text-align: left
-  background-color: $color_light_grey
-  padding: 25px 30px
-  margin: 0
-  list-style: none
-  color: $color_orange
-  a
-    color: $color_orange
-    text-decoration: underline
-    &:hover
-      color: $color_black
-  li
-    position: relative
-    .back
-      position: relative
-      display: inline
-      top: 3px
-      padding-left: 15px
-      padding-bottom: 3px
-      border: none
-      background: url('../../img/headerMenuDot.png') no-repeat
-    a
-      p
-        display: inline
-      &:hover .back
-        padding-left: 15px
-        padding-bottom: 3px
-        border: none
-        background: url('../../img/headerMenuRight.png') no-repeat
-    
+	text-align: left
+	background-color: $color_light_grey
+	padding: 25px 20px
+	margin: 0
+	list-style: none
+	color: $color_orange
+	a
+		color: $color_orange
+		text-decoration: underline
+		&:hover
+			color: $color_black
+			text-decoration: none
+	li
+		position: relative
+		.back
+			position: relative
+			display: inline
+			line-height: 30px
+			top: 3px
+			padding-left: 15px
+			padding-bottom: 3px
+			border: none
+			background: url('../../img/headerMenuDot.png') no-repeat
+		a
+			p
+				display: inline
+			&:hover .back
+				padding-left: 15px
+				padding-bottom: 3px
+				border: none
+				background: url('../../img/headerMenuRight.png') no-repeat
+
