--- a/source/stylesheets/main.css.sass
+++ b/source/stylesheets/main.css.sass
@@ -68,13 +68,11 @@ h5
 	font-size: 12px
 
 .h1.with-top-margin,
-.h2.with-top-margin
-	margin-top: 30px
-
+.h2.with-top-margin,
 .h3.with-top-margin,
 .h4.with-top-margin,
 .h5.with-top-margin
-	margin-top: 10px
+	margin-top: 25px
 
 .h1.left-15,
 .h2.left-15,
