--- a/source/one_news.html.haml
+++ b/source/one_news.html.haml
@@ -22,7 +22,7 @@
 			%a{:href => '#'} Все записи
 			&nbsp;
 			%i.icon-angle-right
-		%h4.upper
+		%span.h4.upper
 			больше записей из блогов
 
 		%ul.blogs-list#blogCarusel.jcarousel-skin-tango
