--- a/source/stylesheets/lib/_successHistory.css.sass
+++ b/source/stylesheets/lib/_successHistory.css.sass
@@ -65,3 +65,10 @@
       margin-left: 40px
     .sb-right
       float: right
+
+.blogs_wrapper#success_history
+  margin-bottom: 30px
+  .tips-address
+    padding-top: 10px
+  .tips-body
+    color: #000
