--- a/source/stylesheets/lib/one_news.css.sass
+++ b/source/stylesheets/lib/one_news.css.sass
@@ -130,6 +130,10 @@ $color_white: #fff
 			padding: 20px 5px
 		.jcarousel-clip-horizontal
 			height: 215px
-		.jcarousel-prev-horizontal, .jcarousel-next-horizontal
+		.jcarousel-prev-horizontal
 			top: 80px
+			left: -3px
+		.jcarousel-next-horizontal
+			top: 80px
+			right: -3px
 
