--- a/source/success_details.html.haml
+++ b/source/success_details.html.haml
@@ -19,7 +19,7 @@
 			= partial "vkgroup"
 		%div.fbgroup
 			= partial "fbgroup"
-%div.blogs_wrapper
+%div.blogs_wrapper#success_history
 	.blog-list-container
 		%ul.blogs-list#blogCarusel.jcarousel-skin-tango1
 			%li.blog-elem
