Add styles and some files

--- a/source/stylesheets/lib/_button.css.sass
+++ b/source/stylesheets/lib/_button.css.sass
@@ -52,6 +52,8 @@ button.orange:before
 	-webkit-transform: skewX(-12deg)
 	transform: skewX(-12deg)
 
+.orange:focus
+	outline: none
 
 .orange.oneLine
 	min-height: 16px
