--- a/source/stylesheets/main2.css.sass
+++ b/source/stylesheets/main2.css.sass
@@ -16,8 +16,10 @@
 @import 'lib/dropdown'
 @import 'lib/noJS'
 @import 'lib/presentations'
-@import 'lib/successHistory'
 @import 'lib/successDetails'
+@import 'lib/successHistory'
+@import 'lib/franshiza-page'
+@import 'lib/franshiza_popover'
 
 body
 	font-family: PTSans
