--- a/source/success_details.html.haml
+++ b/source/success_details.html.haml
@@ -1,5 +1,7 @@
+= partial 'franshiza_popver'
+
 %div.text_content_wrapper
-	%a.bbuy{:href => '#'}
+	%a.bbuy{:href=> '#', 'data-toggle' => 'modal', 'data-target' => '#franshiza-modal'}
 		КУПИТЬ ФРАНШИЗУ
 		.arrow
 			>
