--- a/source/success_history.html.haml
+++ b/source/success_history.html.haml
@@ -1,8 +1,10 @@
+= partial 'franshiza_popver'
+
 .success-history-box
   .title-row
     .title
       ИСТОРИИ УСПЕХА
-    %a{'data-toggle' => 'modal', 'data-target' => '#franshiza-modal'}
+    %a{:href=> '#', 'data-toggle' => 'modal', 'data-target' => '#franshiza-modal'}
       КУПИТЬ ФРАНШИЗУ
       .arrow
         >
