fixed franshiza page: acordion fixed, gallery optimized

--- a/source/franshiza.html.haml
+++ b/source/franshiza.html.haml
@@ -21,7 +21,7 @@
 			%span.h1
 				ОПИСАНИЕ ФРАНШИЗЫ PREMIUM
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> ".collapse_1"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> "#premium-info-text-block .collapse_1"}
 					%span.h3 ИНВЕСТИЦИИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -32,7 +32,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> ".collapse_2"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> "#premium-info-text-block .collapse_2"}
 					%span.h3 СРОК ОКУПАЕМОСТИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -43,7 +43,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> ".collapse_3"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> "#premium-info-text-block .collapse_3"}
 					%span.h3 СРОК ВЫХОДА НА ПРИБЫЛЬ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -54,7 +54,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> ".collapse_4"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> "#premium-info-text-block .collapse_4"}
 					%span.h3 РЕНТАБЕЛЬНОСТЬ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -65,7 +65,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> ".collapse_5"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> "#premium-info-text-block .collapse_5"}
 					%span.h3 ПРОГНОЗ ПО ВЫРУЧКЕ И ПРИБЫЛИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -76,7 +76,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> ".collapse_6"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> "#premium-info-text-block .collapse_6"}
 					%span.h3 ТРЕБОВАНИЯ В ПОМЕЩЕНИЮ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -87,7 +87,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> ".collapse_7"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#premium-info-text-block", :href=> "#premium-info-text-block .collapse_7"}
 					%span.h3 ЕСЛИ У МЕНЯ ЕСТЬ СТО?!
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -203,7 +203,7 @@
 			%span.h1
 				ОПИСАНИЕ ФРАНШИЗЫ PREMIUM
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> ".collapse_1"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> "#standart-info-text-block .collapse_1"}
 					%span.h3 ИНВЕСТИЦИИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -214,7 +214,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> ".collapse_2"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> "#standart-info-text-block .collapse_2"}
 					%span.h3 СРОК ОКУПАЕМОСТИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -225,7 +225,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> ".collapse_3"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> "#standart-info-text-block .collapse_3"}
 					%span.h3 СРОК ВЫХОДА НА ПРИБЫЛЬ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -236,7 +236,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> ".collapse_4"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> "#standart-info-text-block .collapse_4"}
 					%span.h3 РЕНТАБЕЛЬНОСТЬ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -247,7 +247,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> ".collapse_5"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> "#standart-info-text-block .collapse_5"}
 					%span.h3 ПРОГНОЗ ПО ВЫРУЧКЕ И ПРИБЫЛИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -258,7 +258,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> ".collapse_6"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> "#standart-info-text-block .collapse_6"}
 					%span.h3 ТРЕБОВАНИЯ В ПОМЕЩЕНИЮ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -269,7 +269,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> ".collapse_7"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#standart-info-text-block", :href=> "#standart-info-text-block .collapse_7"}
 					%span.h3 ЕСЛИ У МЕНЯ ЕСТЬ СТО?!
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -385,7 +385,7 @@
 			%span.h1
 				ОПИСАНИЕ ФРАНШИЗЫ PREMIUM
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> ".collapse_1"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> "#express-info-text-block .collapse_1"}
 					%span.h3 ИНВЕСТИЦИИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -396,7 +396,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> ".collapse_2"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> "#express-info-text-block .collapse_2"}
 					%span.h3 СРОК ОКУПАЕМОСТИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -407,7 +407,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> ".collapse_3"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> "#express-info-text-block .collapse_3"}
 					%span.h3 СРОК ВЫХОДА НА ПРИБЫЛЬ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -418,7 +418,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> ".collapse_4"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> "#express-info-text-block .collapse_4"}
 					%span.h3 РЕНТАБЕЛЬНОСТЬ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -429,7 +429,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> ".collapse_5"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> "#express-info-text-block .collapse_5"}
 					%span.h3 ПРОГНОЗ ПО ВЫРУЧКЕ И ПРИБЫЛИ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -440,7 +440,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> ".collapse_6"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> "#express-info-text-block .collapse_6"}
 					%span.h3 ТРЕБОВАНИЯ В ПОМЕЩЕНИЮ
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -451,7 +451,7 @@
 						%p Ретроконверсия национального наследия, вопреки мнению П.Друкера, слабо индуцирует фирменный стиль, не считаясь с затратами.
 
 			.elem.panel
-				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> ".collapse_7"}
+				%a.toggler.collapsed{'data-toggle' => "collapse", 'data-parent'=> "#express-info-text-block", :href=> "#express-info-text-block .collapse_7"}
 					%span.h3 ЕСЛИ У МЕНЯ ЕСТЬ СТО?!
 					%i.icon-angle-down
 					%i.icon-angle-up
@@ -560,36 +560,51 @@
 :javascript
 	function init_gallery(st)
 	{
-		$('#'+st+'-gallery').bxSlider({
+		var list = Array();
+
+		var el = $('#'+st+'-gallery').bxSlider({
 			controls: false,
 			pager: true,
 			pagerCustom: '#'+st+'-example .gallery-controls',
 			mode: 'fade',
 			preloadImages: 'visible'
 		});
+		list.push(el);
 
-		$('#'+st+'-example .gallery-controls').bxSlider({
-			controls: true,
-			pager: false,
-			nextSelector: '#'+st+'-pg-next',
-			prevSelector: '#'+st+'-pg-prev',
-			slideWidth: 104,
-			minSlides: 3,
-			maxSlides: 3,
-			slideMargin: 10,
-			preloadImages: 'visible'
-		})
+		$('#'+st+'-example .gallery-controls').each(function(){
+			var e = $(this).bxSlider({
+				controls: true,
+				pager: false,
+				nextSelector: '#'+st+'-pg-next',
+				prevSelector: '#'+st+'-pg-prev',
+				slideWidth: 104,
+				minSlides: 3,
+				maxSlides: 3,
+				slideMargin: 10,
+				preloadImages: 'visible'
+			});
+			list.push(e);
+		});
+
+		return list;
 	}
 	$(document).ready(function()
 	{
-		init_gallery('premium');
+		var gl_premium = init_gallery('premium');
+		var gl_standart = init_gallery('standart');
+		var gl_express = init_gallery('express');
+
 		$('.Standart_building_link').on('click', function(){
 			$('#premium-info-text-block [data-target^=collapse_]').collapse('hide')
 			$('#express-info-text-block [data-target^=collapse_]').collapse('hide')
 			$('#Express_building').hide('slow');
 			$('#Premium_building').hide('slow');
-			$('#Standart_building').show('slow');
-			init_gallery('standart');
+			$('#Standart_building').show('slow', function(){
+				gl_standart.every(function(e){
+					e.redrawSlider();
+					return true;
+				});
+			});
 			return false;
 		})
 		$('.Express_building_link').on('click', function(){
@@ -597,8 +612,13 @@
 			$('#standart-info-text-block [data-target^=collapse_]').collapse('hide')
 			$('#Standart_building').hide('slow');
 			$('#Premium_building').hide('slow');
-			$('#Express_building').show('slow');
-			init_gallery('express');
+			$('#Express_building').show('slow', function() {
+				gl_express.every(function(e){
+					e.redrawSlider();
+					return true;
+				});
+			});
+
 			return false;
 		})
 		$('.Premium_building_link').on('click', function(){
@@ -606,8 +626,13 @@
 			$('#standart-info-text-block [data-target^=collapse_]').collapse('hide')
 			$('#Express_building').hide('slow');
 			$('#Standart_building').hide('slow');
-			$('#Premium_building').show('slow');
-			init_gallery('premium');
+			$('#Premium_building').show('slow', function (){
+				gl_premium.every(function(e){
+					e.redrawSlider();
+					return true;
+				});
+			});
+
 			return false;
 		})
 
