--- a/source/stylesheets/lib/franshiza-page.css.sass
+++ b/source/stylesheets/lib/franshiza-page.css.sass
@@ -133,6 +133,8 @@
 
 					.bx-wrapper
 						margin-bottom: 15px
+						.bx-viewport
+							height: 74px
 
 					.prev-link,
 					.next-link
@@ -145,7 +147,7 @@
 						position: absolute
 						top: 50%
 						left: -10px
-						z-index: 1
+						z-index: 2
 
 					.prev-link:before,
 					.next-link:before
