--- a/source/stylesheets/lib/yamap.css.sass
+++ b/source/stylesheets/lib/yamap.css.sass
@@ -1,12 +1,16 @@
 $bgcolor_express: #7eceee
 $bgcolor_standard: #e2e4e5
 $bgcolor_premium: #fbd732
-$fgcolor_description: #87d1ef
+$fgcolor_description: #000
+$fgcolor_a: #f27f35
 
-#yamap
-  width: 900px
-  height: 600px
-  display: block
+ymaps.ymaps-outer-pane
+  width: auto
+  height: auto
+
+#yamap, .ymaps-outer-pane
+  width: 790px
+  height: 370px
   .date
     margin: -32px 0 0 -40px
     position: relative
@@ -94,7 +98,7 @@ $fgcolor_description: #87d1ef
           &.express
             &:before
               background-color: $bgcolor_express
-          &.standatd
+          &.standard
             &:before
               background-color: $bgcolor_standard
           &.premium
@@ -103,6 +107,7 @@ $fgcolor_description: #87d1ef
     .description_wrapper
       padding: 10px 20px 25px 20px
       line-height: 23px
+      height: 185px
       border: 1px solid lightgrey
       p, a
         color: $fgcolor_description
@@ -110,14 +115,25 @@ $fgcolor_description: #87d1ef
         padding: 0
       a
         text-decoration: underline
+        color: $fgcolor_a
       .services
         list-style: none
         display: inline-block
+        margin: 0
+        padding: 0
         &:before
           content: "Услуги:"
           font-weight: bold
           color: #000
+          line-height: 20px
+          position: relative
+          top: -7px
         li
+          width: 23px
+          height: 23px
+          margin: 0 5px
+          display: inline-block
+          cursor: pointer
           background-image: url('../../images/services.png')
         .repair
           background-position: 0 0
