header menu bug is fixed

--- a/source/stylesheets/lib/_dropdown.css.sass
+++ b/source/stylesheets/lib/_dropdown.css.sass
@@ -148,6 +148,7 @@ div.menu-element ul.dropdown-menu
 	box-shadow: none
 	-webkit-box-shdow: none
 	-moz-box-shadow: none
+	top: 120%
 div.menu-element ul.dropdown-menu.no-border
 	border-right-width: 0
 	-webkit-border-right-widht: 0
