--- a/source/our_stations.html.haml
+++ b/source/our_stations.html.haml
@@ -67,4 +67,4 @@
 								Записаться
 .right-content
 	#yamap
-= javascript_include_tag 'yamap'
+%script{:type => 'text/javascript', :src => 'javascripts/yamap.js'}
