--- a/source/stations.html.haml
+++ b/source/stations.html.haml
@@ -56,7 +56,7 @@
 	.right-column
 		.map
 			#yamap{:style => 'height: 366px; width: 800px'}
-			= javascript_include_tag 'yamap'
+			%script{:type => 'text/javascript', :src => 'javascripts/yamap.js'}
 		.gallery
 			%span.h1
 				F!T SERVICE
