--- a/source/stylesheets/lib/yamap.css.sass
+++ b/source/stylesheets/lib/yamap.css.sass
@@ -37,19 +37,19 @@ ymaps.ymaps-outer-pane
           background-color: $bgcolor_express
         p
           &:after
-            background-image: url('../../images/express_end.png')
+            background-image: url('../images/express_end.png')
       &.standard
         &:before
           background-color: $bgcolor_standard
         p
           &:after
-            background-image: url('../../images/standard_end.png')
+            background-image: url('../images/standard_end.png')
       &.premium
         &:before
           background-color: $bgcolor_premium
         p
           &:after
-            background-image: url('../../images/premium_end.png')
+            background-image: url('../images/premium_end.png')
   .balloon_wrapper
     width: 300px
     height: 365px
@@ -82,7 +82,7 @@ ymaps.ymaps-outer-pane
         right: 5px
         width: 17px
         height: 17px
-        background-image: url('../../images/balloon_close.png')
+        background-image: url('../images/balloon_close.png')
       .balloon_absolute
         position: absolute
         bottom: 0
@@ -134,7 +134,7 @@ ymaps.ymaps-outer-pane
           margin: 0 5px
           display: inline-block
           cursor: pointer
-          background-image: url('../../images/services.png')
+          background-image: url('../images/services.png')
         .repair
           background-position: 0 0
         .diagnostics
