--- a/source/_text_content.html.haml
+++ b/source/_text_content.html.haml
@@ -68,6 +68,7 @@
       Резкий запах могут иметь и качественные незамерзайки, в состав которых входит изопропиловый спирт. Он не так опасен, как метанол, но тоже может оказывать отрицательное влияние на организм человека. Для того чтобы хоть немного смягчить резкий запах, производители используют ароматизаторы и всевозможные отдушки. Соответственно и стоят такие незамерзайки дороже.
     %ol.numberlist
       %li
+        %span 1
         %p
           Специфичный запах
         %ul.greylist
@@ -81,9 +82,11 @@
             %p
               Красители
       %li
+        %span 2
         %p
           Головные боли
       %li 
+        %span 3
         %p
           Низкая цена
     %p
