--- a/source/stylesheets/lib/_service_page.css.sass
+++ b/source/stylesheets/lib/_service_page.css.sass
@@ -3,10 +3,13 @@
 	min-height: 100%
 	margin-right: 40px
 	display: inline-block
+	zoom: 1
+	*display: inline
 	vertical-align: top
 .right-content
 	width: 790px
 	height: 100%
 	display: inline-block
+	zoom: 1
+	*display: inline
 	vertical-align: top
-
